# irg-lab-2020

./: .gitignore  README.md  build.sh  meson.build
1/: main.cpp
2/: fragment.glsl  main.cpp
3/: fragment.glsl  main.cpp  vertex.glsl
4/: fragment.glsl  main.cpp  vertex.glsl
4/shaders/: fragment.glsl  light_fragment.glsl  light_vertex.glsl  vertex.glsl
5/: main.cpp  meson.build
6/: .ycm_extra_conf.py  main.cpp  meson.build
6/shaders/: vertex.glsl
7/: main.cpp  meson.build
7/shaders/: fragment.glsl  vertex.glsl
8/: main.cpp  meson.build
8/include/irg/: fractals.hpp
8/shaders/: fragment.glsl  vertex.glsl
8/src/irg/: fractals.cpp
include/irg/: camera.hpp  common.hpp  generic_mesh.hpp  keyboard.hpp  mesh.hpp  mouse.hpp  primitive.hpp  scene.hpp  shader.hpp  shape.hpp  texture.hpp
src/: texture.cpp
src/irg/: camera.cpp  common.cpp  keyboard.cpp  mesh.cpp  mouse.cpp  scene.cpp  shape.cpp  texture.cpp
